--- a/menus-dialogues/valueselector/time/style.css
+++ b/menus-dialogues/valueselector/time/style.css
@@ -65,7 +65,7 @@ body[role="application"] [role="dialog"] [role="slider"]:after {
 
 	body[role="application"] [role="dialog"] [role="slider"] ol,
 	body[role="application"] [role="dialog"] [role="slider"] ul {
-		margin: 0 -2rem 0 -0.2rem;
+		margin: 0 -0.8rem 0 -1rem;
 		padding: 0;		
 		max-height: 100%;
 	}
